# script-herder

cli/: Cargo.toml
cli/src/: args.rs  logger.rs  main.rs
cli/src/commands/: config.rs  repo.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/config/: config_env.rs  config_json.rs  mod.rs  provider.rs
core/src/git/: mod.rs  repo.rs  repo_info.rs
core/src/infra/: enum_str.rs  error.rs  io.rs  mod.rs  priority_provider.rs
