[package]
name = "script_herder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive", "env"] }
dirs = "5.0.1"
fern = { version = "0.6.2", features = ["colored"] }
humantime = "2.1.0"
log = "0.4.19"
script_herder_core ={ path = "../core" }
